Fixed unreadable website

--- a/src/static/main.css
+++ b/src/static/main.css
@@ -2,6 +2,7 @@ h1 {
 	text-align: center; 
 	font-family: cursive;
 	color:#6B9560;
+	background-color: black;
 }
 body {
 	background-color: #753EBD;
@@ -9,17 +10,23 @@ body {
 h2{
 color:#6B9560;
 font-family: cursive;
+background-color: black;
 }
 h4{
 color:#6B9560;
 font-family: cursive;
+background-color: black;
 }
 button{
 	color:black;
 	font-family: cursive;
+	border-color: black;
+	border-width: 10px;
 }
 input{
 	color:black;
+	border-color: black;
+	border-width: 10px;
 	font-family: cursive;
 }
 img{
@@ -29,4 +36,11 @@ img{
 }
 u{
 color:#6B9560;	
+}
+text{
+	color: black;
+}
+p{
+	color:#6B9560;
+	font-family: cursive;
 }
